--- a/Pegasus/src/main/resources/application.properties
+++ b/Pegasus/src/main/resources/application.properties
@@ -4,6 +4,14 @@ server.port=8080
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+
+#MySQL
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/basics?allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.sql.init.mode=always
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
